@@ -3,6 +3,7 @@ amaroK ChangeLog
 (c) 2002-2004 the amaroK authors.
 
 
+  * fix: O(n) behavior for playlist scrolling fixed
   * add: setting to make playlist colours the KDE defaults
   * add: support for tag-editing directly in playlist  
   * chg: replaced old FileBrowser with the comfortable fileselector from KDevelop
